load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_121",
    srcs = ["test_121.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_122",
    srcs = ["test_122.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_123",
    srcs = ["test_123.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_124",
    srcs = ["test_124.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_125",
    srcs = ["test_125.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_126",
    srcs = ["test_126.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_127",
    srcs = ["test_127.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_128",
    srcs = ["test_128.py"],
    tags = ["it-test", "small-it"],
)

py_test(
    name = "test_129",
    srcs = ["test_129.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_130",
    srcs = ["test_130.py"],
    tags = ["it-test", "small-it"],
)

py_test(
    name = "test_131",
    srcs = ["test_131.py"],
    tags = ["it-test", "small-it"],
)

py_test(
    name = "test_132",
    srcs = ["test_132.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_133",
    srcs = ["test_133.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_134",
    srcs = ["test_134.py"],
    tags = ["it-test", "small-it"],
)

py_test(
    name = "test_135",
    srcs = ["test_135.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_136",
    srcs = ["test_136.py"],
    tags = ["it-test"],
)

py_test(
    name = "test_137",
    srcs = ["test_137.py"],
    tags = [],
)

py_test(
    name = "test_138",
    srcs = ["test_138.py"],
    tags = [],
)

py_test(
    name = "test_139",
    srcs = ["test_139.py"],
    tags = [],
)

py_test(
    name = "test_140",
    srcs = ["test_140.py"],
    tags = [],
)

